hero section added

--- a/index.html
+++ b/index.html
@@ -15,5 +15,30 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <!-- header section starts -->
+    <header id="hero-section">
+      <div class="hero-container">
+        <div class="hero-text">
+          <h1>
+            <span class="orange-text">Skip</span> The Diet,<br />
+            Just Eat Healthy<br />
+            With Food Network
+          </h1>
+          <p>
+            Imagine you don't need a diet because we provide <br />
+            healthy and delicious food for you!
+          </p>
+          <a class="btn" href="#">Order Food</a>
+        </div>
+        <div class="hero-image">
+          <img
+            src="./images/male/31602633-happy-man-with-unhealthy-burger-sandwich-in-hand-get-ready-to-eat-isolated-on-a-white-background-fas-removebg-preview.png"
+            alt=""
+          />
+        </div>
+      </div>
+    </header>
+    <!-- header section ends -->
+  </body>
 </html>
