--- a/index.html
+++ b/index.html
@@ -40,5 +40,26 @@
       </div>
     </header>
     <!-- header section ends -->
+    <!-- main section starts -->
+    <main>
+      <section id="about-section">
+        <div class="about-container">
+          <div class="about-image">
+            <img src="./images/female/Person Image.png" alt="" />
+          </div>
+          <div class="about-text">
+            <h3>About Me</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Condimentum diam orci pretium a pharetra, feugiat cursus. Dictumst
+              risus, sem egestas odio cras adipiscing vulputate. Nisi, risus in
+              suscipit non. Non commodo volutpat, pharetra, vel
+            </p>
+            <a class="btn" href="#">Contact Me</a>
+          </div>
+        </div>
+      </section>
+    </main>
+    <!-- main section ends -->
   </body>
 </html>
