--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <!-- header section ends -->
     <!-- main section starts -->
     <main>
+      <!-- about section starts -->
       <section id="about-section">
         <div class="about-container">
           <div class="about-image">
@@ -59,6 +60,48 @@
           </div>
         </div>
       </section>
+      <!-- about section ends -->
+      <!-- recipie section starts -->
+      <section id="recipie-section">
+        <h3 class="recipie-title">My Recipies</h3>
+        <p class="recipie-description">
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. <br />
+          Lorem Ipsum has been the industry's standard dummy text ever since the
+          1500s.
+        </p>
+        <div class="recipies-container">
+          <!-- item 1 -->
+          <div class="item-card">
+            <div class="item-image">
+              <img src="./images/food/Project Cover.jpg" alt="" />
+            </div>
+            <div class="item-text">
+              <h3>Recipie Title</h3>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s.
+              </p>
+            </div>
+          </div>
+          <!-- item 2 -->
+          <div class="item-card">
+            <div class="item-image">
+              <img src="./images/food/Project Cover1.jpg" alt="" />
+            </div>
+            <div class="item-text">
+              <h3>Recipie Title</h3>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- recipie section ends -->
     </main>
     <!-- main section ends -->
   </body>
