social media followers added

--- a/index.html
+++ b/index.html
@@ -102,6 +102,27 @@
         </div>
       </section>
       <!-- recipie section ends -->
+      <!-- social media subscribe section starts -->
+      <section id="media-section">
+        <div class="media-container">
+          <!-- Youtube -->
+          <div class="social-media">
+            <h1>700k</h1>
+            <p>Youtube Subscribers</p>
+          </div>
+          <!-- Instragram -->
+          <div class="social-media">
+            <h1>2.4m</h1>
+            <p>Instagram Followers</p>
+          </div>
+          <!-- Dribble -->
+          <div class="social-media">
+            <h1>100k</h1>
+            <p>Dribbble Shot Likes</p>
+          </div>
+        </div>
+      </section>
+      <!-- social media subscribe section ends -->
     </main>
     <!-- main section ends -->
   </body>
