footer added now

--- a/index.html
+++ b/index.html
@@ -125,5 +125,13 @@
       <!-- social media subscribe section ends -->
     </main>
     <!-- main section ends -->
+    <!-- footer section starts -->
+    <footer id="footer-section">
+      <h3 class="footer-title">
+        <span class="orange-text">Recharge</span> Your Body
+      </h3>
+      <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+    </footer>
+    <!-- footer section ends -->
   </body>
 </html>
