--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
   </head>
   <body>
     <!-- header section starts -->
@@ -54,7 +56,7 @@
               Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               Condimentum diam orci pretium a pharetra, feugiat cursus. Dictumst
               risus, sem egestas odio cras adipiscing vulputate. Nisi, risus in
-              suscipit non. Non commodo volutpat, pharetra, vel
+              suscipit non. Non commodo volutpat, pharetra, vel.
             </p>
             <a class="btn" href="#">Contact Me</a>
           </div>
@@ -77,7 +79,7 @@
               <img src="./images/food/Project Cover.jpg" alt="" />
             </div>
             <div class="item-text">
-              <h3>Recipie Title</h3>
+              <h3>Shish Kebab</h3>
               <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting
                 industry. Lorem Ipsum has been the industry's standard dummy
@@ -91,7 +93,7 @@
               <img src="./images/food/Project Cover1.jpg" alt="" />
             </div>
             <div class="item-text">
-              <h3>Recipie Title</h3>
+              <h3>Kofte Kebab</h3>
               <p>
                 Lorem Ipsum is simply dummy text of the printing and typesetting
                 industry. Lorem Ipsum has been the industry's standard dummy
